# cloud-native-hackathon-II

./: .env.example  .gitignore  ANALYSIS_REPORT.md  AUTHENTICATION_FIX_SUMMARY.md  BACKEND_FIX_SUMMARY.md  CLAUDE.md  Hackathon II - Todo Spec-Driven Development.txt  IMPLEMENTATION_JOURNAL.md  IMPLEMENTATION_SUMMARY.md  PHASES.md  PHASE_3_GUIDE.md  PROJECT_STATUS.md  README.md  SHIPPING_SUMMARY.md  SKILL_GAP_ANALYSIS.md  TESTING_GUIDE.md  error.md  logs.md  main.py  pyproject.toml  requirements.txt  testing_file.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  DEPLOYMENT.md  MCP_SETUP_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  STATUS.md  TESTING_CHECKLIST.md  agent.py  math_teacher_cli.py  pyproject.toml  run_migration_003.py  test_chat_stream.py  test_manual_demo.py  test_mcp_manual.py  test_tools_demo.py
backend/mcp_server/: server.py
backend/mcpserver/: __init__.py  auth.py  errors.py  logging_config.py  mcp_server.py  middleware.py  schemas.py
backend/migrations/: 003_add_conversation_message_tables.sql
backend/src/: config.py  main.py
backend/tests/: conftest.py  test_models_conversation.py  test_models_message.py  test_routes_chat.py  test_schemas_chat.py
frontend/: .env.example  CLAUDE.md  README.md  THEME.md  build_log_2.txt  jest.config.ts  lint_errors.txt  package-lock.json  package.json  tsc_errors.txt  tsconfig.json
phase-1-cli-todo/: main.py  pyproject.toml  requirements.txt
phase-1-cli-todo/tests/: conftest.py
specs/000-cli-todo/: plan.md  (+3 more)
(+405 files in other folders)
